--- a/index.html
+++ b/index.html
@@ -91,18 +91,39 @@
       <!-- section_2 end -->
 
       <section class="section_4">
-        <div class="title_wrap title_4">
-          <h2>Partnered with Industry Leaders</h2>
-          <p>
-            업스테이지의 기술력은 국내 주요 금융·보험사와 다양한 기업에서
-            검증되었습니다
-          </p>
-        </div>
         <div class="company_wrap">
-          <div class="top_turn">
-            <img src="" alt="" />
+          <div class="turn top_turn">
+            <div class="turn_con"><img src="img/company_1.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_2.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_3.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_4.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_5.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_6.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_7.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_1.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_2.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_3.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_4.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_5.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_6.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_7.png" alt="" /></div>
           </div>
-          <div class="bottom_turn"></div>
+          <div class="turn bottom_turn">
+            <div class="turn_con"><img src="img/company_8.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_9.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_10.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_11.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_12.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_13.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_14.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_8.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_9.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_10.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_11.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_12.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_13.png" alt="" /></div>
+            <div class="turn_con"><img src="img/company_14.png" alt="" /></div>
+          </div>
         </div>
       </section>
     </div>
