--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <!-- header end -->
 
       <div class="floating_btn">
-        <i class="fas fa-comment"></i>
+        <img src="img/flow_icon.png" alt="flow_icon " />
       </div>
       <!-- floating__btn end -->
 
@@ -87,8 +87,118 @@
             정확성과 효율성을 확보합니다.
           </p>
         </div>
+
+        <div class="con_wrap_2">
+          <div class="con_2">
+            <div class="con_title_wrap_2">
+              <div class="num_2">01</div>
+              <div class="title_2">
+                <h2>
+                  Document <br />
+                  Parse
+                </h2>
+                <h3>업스테이지 문서 구문 분석</h3>
+                <p>
+                  복잡한 문서를 대규모 언어 모델(LLM)이 원활하게 처리할 수 있는
+                  형식으로 <br />
+                  변환하는 최고의 제품 Upstage Document Parse를 소개합니다.
+                </p>
+                <div class="btn_2">
+                  <a href="#">자세히보기</a>
+                </div>
+              </div>
+            </div>
+            <div class="con_img_2">
+              <img
+                src="img/section_2_1.png"
+                alt="Document 
+              Parse"
+              />
+            </div>
+          </div>
+          <div class="con_2">
+            <div class="con_title_wrap_2">
+              <div class="num_2">02</div>
+              <div class="title_2">
+                <h2>
+                  Information <br />
+                  Extract
+                </h2>
+                <h3>업스테이지 정보 추출</h3>
+                <p>
+                  기업은 계약서, 송장, 재무제표 등 방대한 문서를 다룹니다
+                  UpstageExtract는 <br />
+                  모든 문서에서 빠르고 정확하게 데이터를 추출합니다.
+                </p>
+                <div class="btn_2">
+                  <a href="#">자세히보기</a>
+                </div>
+              </div>
+            </div>
+            <div class="con_img_2">
+              <img
+                src="img/section_2_2.png"
+                alt="Document 
+              Parse"
+              />
+            </div>
+          </div>
+          <div class="con_2">
+            <div class="con_title_wrap_2">
+              <div class="num_2">03</div>
+              <div class="title_2">
+                <h2>Solar LLM</h2>
+                <h3>업스테이지 솔라 프로 2</h3>
+                <p>
+                  추론, 도구 활용 그리고 다국어 성능의 경계를 넓힙니다 여러
+                  도메인에서 <br />
+                  복잡한 작업과 에이전트 방식의 워크플로를 지원하도록
+                  설계되었습니다
+                </p>
+                <div class="btn_2">
+                  <a href="#">자세히보기</a>
+                </div>
+              </div>
+            </div>
+            <div class="con_img_2">
+              <img
+                src="img/section_2_3.png"
+                alt="Document 
+              Parse"
+              />
+            </div>
+          </div>
+        </div>
       </section>
       <!-- section_2 end -->
+
+      <div class="section_3">
+        <div class="title_3">
+          <h2>Expert-Built AI</h2>
+        </div>
+        <div class="con_wrap_3">
+          <div class="donut">
+            <img src="img/section_3_donut.png" alt="donut" />
+            <p>Enterprise <br /><span>AI</span> Solutions</p>
+            <div class="donut_stick_1">
+              <div class="stick_1"></div>
+              <div class="stick_circle_1"></div>
+            </div>
+            <div class="donut_stick_2">
+              <div class="stick_2"></div>
+              <div class="stick_circle_2"></div>
+            </div>
+            <div class="donut_stick_3">
+              <div class="stick_circle_3"></div>
+              <div class="stick_3"></div>
+            </div>
+            <div class="donut_stick_4">
+              <div class="stick_circle_4"></div>
+              <div class="stick_4"><span>rkskekfkdsfs</span></div>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <section class="section_4">
         <div class="company_wrap">
