--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       </section>
       <!-- section_2 end -->
 
-      <div class="section_3">
+      <section class="section_3">
         <div class="title_3">
           <h2>Expert-Built AI</h2>
         </div>
@@ -181,16 +181,16 @@
             <img src="img/section_3_donut.png" alt="donut" />
             <p>Enterprise <br /><span>AI</span> Solutions</p>
             <div class="donut_stick_1">
-              <div class="stick_1"></div>
+              <div class="stick_1"><span>rkskekfkdsfs</span></div>
               <div class="stick_circle_1"></div>
             </div>
             <div class="donut_stick_2">
-              <div class="stick_2"></div>
+              <div class="stick_2"><span>rkskekfkdsfs</span></div>
               <div class="stick_circle_2"></div>
             </div>
             <div class="donut_stick_3">
               <div class="stick_circle_3"></div>
-              <div class="stick_3"></div>
+              <div class="stick_3"><span>rkskekfkdsfs</span></div>
             </div>
             <div class="donut_stick_4">
               <div class="stick_circle_4"></div>
@@ -198,7 +198,9 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
+
+      <!-- section_3 end -->
 
       <section class="section_4">
         <div class="company_wrap">
@@ -233,6 +235,47 @@
             <div class="turn_con"><img src="img/company_12.png" alt="" /></div>
             <div class="turn_con"><img src="img/company_13.png" alt="" /></div>
             <div class="turn_con"><img src="img/company_14.png" alt="" /></div>
+          </div>
+        </div>
+      </section>
+
+      <!-- section_4 end -->
+
+      <section class="section_5">
+        <div class="title_wrap title_5">
+          <h2>Customer Success Stories</h2>
+          <p>
+            Upstage AI가 실제 프로젝트에서 고객의 업무 효율과 데이터 처리 <br />
+            정확성을 혁신적으로 향상시킨 사례를 확인하세요.
+          </p>
+        </div>
+      </section>
+      <!-- section_5 end -->
+
+      <section class="section_6">
+        <div class="title_wrap title_5">
+          <h2>Proven excellence in AI</h2>
+          <p>
+            업스테이지의 성과는 혁신과 품질에 대한 헌신을 보여주며
+            <br />세계적인 상과 AI 리더보드 1위를 포함한 업계 최고 평가를
+            받았습니다
+          </p>
+        </div>
+        <div class="con_wrap_6">
+          <div class="bg_circle"></div>
+          <div class="main_circle_wrap">
+            <div class="main_circle circle_1">
+              <div class="con_title_6">AI 100</div>
+              <div class="con_6_img first_img">
+                <img src="img/6_1.png" alt="AI100" />
+              </div>
+              <p>
+                CB Insights에서 혁신과 영향력을 주도하는 <br />
+                세계 100대 AI 기업 중 하나로 인정받았습니다.
+              </p>
+            </div>
+            <div class="main_circle circle_2"></div>
+            <div class="main_circle circle_3"></div>
           </div>
         </div>
       </section>
