--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
     />
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
-    <link rel="stylesheet" href="js/main.js" />
+    <script src="js/main.js"></script>
   </head>
   <body>
     <div class="wrap">
@@ -180,21 +179,49 @@
           <div class="donut">
             <img src="img/section_3_donut.png" alt="donut" />
             <p>Enterprise <br /><span>AI</span> Solutions</p>
+
+            <!-- Stick 1: Insurance (우측 상단) -->
             <div class="donut_stick_1">
-              <div class="stick_1"><span>rkskekfkdsfs</span></div>
+              <div class="stick_1">
+                <div class="txt_wrap_3">
+                  <h2>Insurance</h2>
+                  <p>AI로 보험 운영을 강화하세요.</p>
+                </div>
+              </div>
               <div class="stick_circle_1"></div>
             </div>
+
+            <!-- Stick 2: Healthcare (우측 하단) -->
             <div class="donut_stick_2">
-              <div class="stick_2"><span>rkskekfkdsfs</span></div>
+              <div class="stick_2">
+                <div class="txt_wrap_3">
+                  <h2>Healthcare</h2>
+                  <p>AI를 통해 더욱 스마트한 공급업체 운영을 실현하세요.</p>
+                </div>
+              </div>
               <div class="stick_circle_2"></div>
             </div>
+
+            <!-- Stick 3: Financial Services (좌측 하단) -->
             <div class="donut_stick_3">
               <div class="stick_circle_3"></div>
-              <div class="stick_3"><span>rkskekfkdsfs</span></div>
+              <div class="stick_3">
+                <div class="txt_wrap_3">
+                  <h2>Financial Services</h2>
+                  <p>재무 운영에서 규정 준수 및 의사 결정을 가속화하세요.</p>
+                </div>
+              </div>
             </div>
+
+            <!-- Stick 4: Manufacturing (좌측 상단) -->
             <div class="donut_stick_4">
               <div class="stick_circle_4"></div>
-              <div class="stick_4"><span>rkskekfkdsfs</span></div>
+              <div class="stick_4">
+                <div class="txt_wrap_3">
+                  <h2>Manufacturing</h2>
+                  <p>AI로 제조 작업을 간소화하세요.</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -249,6 +276,130 @@
             정확성을 혁신적으로 향상시킨 사례를 확인하세요.
           </p>
         </div>
+
+        <div class="swiper swiper_5">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="card_5">
+                <div class="card_top">
+                  <div class="ceo_wrap_5">
+                    <p>CEO, Beach & Company</p>
+                    <h2>안나 비치</h2>
+                  </div>
+                </div>
+                <div class="card_line"></div>
+                <div class="card_bottom">
+                  <div class="txt_wrap_5">
+                    <h3>
+                      <span>Upstage AI Space</span>는<br />답을 즉시 찾을 수
+                      있도록 도와줍니다.
+                    </h3>
+                    <p>
+                      더 이상 스크롤하거나 키워드를 추측할 필요가 없습니다.<br />
+                      쉬운 언어로 질문하고 출처와 함께 정확한 답변을 받습니다.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card_5">
+                <div class="card_top">
+                  <div class="ceo_wrap_5">
+                    <p>CTO, 베라</p>
+                    <h2>조 델오르파노</h2>
+                  </div>
+                </div>
+                <div class="card_line"></div>
+                <div class="card_bottom">
+                  <div class="txt_wrap_5">
+                    <h3>
+                      <span>Verra</span> 프로젝트의 <span>AI</span> 기반 데이터
+                      추출 <br />
+                      워크스트림을 위한 강력한 기술을 제공했습니다.
+                    </h3>
+                    <p>
+                      그들의 전략적 지침과 기술적 전문성은 당사의 요구 사항과
+                      <br />목표에 부합하는 솔루션을 구축하는 데 중요한 역할을
+                      했습니다
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card_5">
+                <div class="card_top">
+                  <div class="ceo_wrap_5">
+                    <p>Sendbird의 CEO 겸 공동 창립자</p>
+                    <h2>존 킴</h2>
+                  </div>
+                </div>
+                <div class="card_line"></div>
+                <div class="card_bottom">
+                  <div class="txt_wrap_5">
+                    <h3>
+                      Upstage Solar LLM은 스마트 어시스턴트를 <br />
+                      강화하여 고객 서비스를 혁신합니다.
+                    </h3>
+                    <p>
+                      <span>Smart Assistant와 Solar</span>를 결합하여 생성적
+                      AI의 잠재력을
+                      <br />
+                      최대한 활용하는 솔루션을 제공할 수 있기를 기대합니다.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card_5">
+                <div class="card_top">
+                  <div class="ceo_wrap_5">
+                    <p>CEO, Beach & Company</p>
+                    <h2>안나 비치</h2>
+                  </div>
+                </div>
+                <div class="card_line"></div>
+                <div class="card_bottom">
+                  <div class="txt_wrap_5">
+                    <h3>
+                      <span>Upstage AI Space</span>는<br />답을 즉시 찾을 수
+                      있도록 도와줍니다.
+                    </h3>
+                    <p>
+                      더 이상 스크롤하거나 키워드를 추측할 필요가 없습니다.<br />
+                      쉬운 언어로 질문하고 출처와 함께 정확한 답변을 받습니다.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card_5">
+                <div class="card_top">
+                  <div class="ceo_wrap_5">
+                    <p>CEO, Beach & Company</p>
+                    <h2>안나 비치</h2>
+                  </div>
+                </div>
+                <div class="card_line"></div>
+                <div class="card_bottom">
+                  <div class="txt_wrap_5">
+                    <h3>
+                      <span>Upstage AI Space</span>는<br />답을 즉시 찾을 수
+                      있도록 도와줍니다.
+                    </h3>
+                    <p>
+                      더 이상 스크롤하거나 키워드를 추측할 필요가 없습니다.<br />
+                      쉬운 언어로 질문하고 출처와 함께 정확한 답변을 받습니다.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <!-- section_5 end -->
 
@@ -258,24 +409,73 @@
           <p>
             업스테이지의 성과는 혁신과 품질에 대한 헌신을 보여주며
             <br />세계적인 상과 AI 리더보드 1위를 포함한 업계 최고 평가를
-            받았습니다
+            받았습니다.
           </p>
         </div>
+
         <div class="con_wrap_6">
-          <div class="bg_circle"></div>
+          <div class="bg_circle">
+            <div class="sparkle_orbit sparkle_1">
+              <span class="sparkle"></span>
+            </div>
+            <div class="sparkle_orbit sparkle_2">
+              <span class="sparkle"></span>
+            </div>
+          </div>
+
           <div class="main_circle_wrap">
             <div class="main_circle circle_1">
               <div class="con_title_6">AI 100</div>
               <div class="con_6_img first_img">
-                <img src="img/6_1.png" alt="AI100" />
+                <img src="img/6_1.png" alt="AI 100 - CB Insights" />
               </div>
               <p>
                 CB Insights에서 혁신과 영향력을 주도하는 <br />
                 세계 100대 AI 기업 중 하나로 인정받았습니다.
               </p>
             </div>
-            <div class="main_circle circle_2"></div>
-            <div class="main_circle circle_3"></div>
+
+            <div class="main_circle circle_2">
+              <div class="con_title_6">140+</div>
+              <div class="con_6_img second_img">
+                <img src="img/6_2.png" alt="140+ 논문" />
+              </div>
+              <p>
+                우리는 ECCV, NAACL, CVPR, ICLR 등 최고 AI 컨퍼런스에 <br />
+                논문을 발표하여 AI 연구의 핵심 분야를 발전시켰습니다.
+              </p>
+            </div>
+
+            <div class="main_circle circle_3">
+              <div class="con_title_6">1st place</div>
+              <div class="con_6_img third_img">
+                <img src="img/6_3.png" alt="1st place - LLM Leaderboard" />
+              </div>
+              <p>
+                오픈 LLM 성능을 폭넓고 최신 기준으로 비교·평가해 <br />
+                모델 특성과 순위를 보여주는 공식 리더보드입니다.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- section_6  end -->
+
+      <section class="section_7">
+        <div class="txt_wrap_7">
+          <h2>
+            Flexible Deploy <br />
+            anywhere
+          </h2>
+          <p>
+            인프라에 맞춰 유연하게 배포·통합하며, Upstage는 성능 저하 없이
+            제어할 수 있습니다. <br />
+            프라이빗 또는 하이브리드 배포에 대해 자세히 알아보고 싶으신가요?
+          </p>
+        </div>
+        <div class="btn_wrap_7">
+          <div class="btn_7">
+            <a href="#">Contact us</a>
           </div>
         </div>
       </section>
