1208 까지 작업한것

--- a/index.html
+++ b/index.html
@@ -180,7 +180,6 @@
             <img src="img/section_3_donut.png" alt="donut" />
             <p>Enterprise <br /><span>AI</span> Solutions</p>
 
-            <!-- Stick 1: Insurance (우측 상단) -->
             <div class="donut_stick_1">
               <div class="stick_1">
                 <div class="txt_wrap_3">
@@ -191,7 +190,6 @@
               <div class="stick_circle_1"></div>
             </div>
 
-            <!-- Stick 2: Healthcare (우측 하단) -->
             <div class="donut_stick_2">
               <div class="stick_2">
                 <div class="txt_wrap_3">
@@ -202,7 +200,6 @@
               <div class="stick_circle_2"></div>
             </div>
 
-            <!-- Stick 3: Financial Services (좌측 하단) -->
             <div class="donut_stick_3">
               <div class="stick_circle_3"></div>
               <div class="stick_3">
@@ -213,7 +210,6 @@
               </div>
             </div>
 
-            <!-- Stick 4: Manufacturing (좌측 상단) -->
             <div class="donut_stick_4">
               <div class="stick_circle_4"></div>
               <div class="stick_4">
@@ -479,6 +475,7 @@
           </div>
         </div>
       </section>
+      <!-- section_7 end -->
     </div>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
