--- a/index.html
+++ b/index.html
@@ -221,6 +221,48 @@
             </div>
           </div>
         </div>
+        <div class="con_wrap_3_mobile">
+          <div class="donut_mobile">
+            <img src="img/section_3_donut.png" alt="donut" />
+            <p>Enterprise <br /><span>AI</span> Solutions</p>
+          </div>
+
+          <div class="mobile_item mobile_item_1">
+            <div class="mobile_stick mobile_stick_1"></div>
+            <div class="mobile_circle mobile_circle_1"></div>
+            <div class="mobile_txt">
+              <h2>Insurance</h2>
+              <p>AI로 보험 운영을 강화하세요.</p>
+            </div>
+          </div>
+
+          <div class="mobile_item mobile_item_2">
+            <div class="mobile_stick mobile_stick_2"></div>
+            <div class="mobile_circle mobile_circle_2"></div>
+            <div class="mobile_txt">
+              <h2>Healthcare</h2>
+              <p>AI를 통해 더욱 스마트한 공급업체 운영을 실현하세요.</p>
+            </div>
+          </div>
+
+          <div class="mobile_item mobile_item_3">
+            <div class="mobile_circle mobile_circle_3"></div>
+            <div class="mobile_stick mobile_stick_3"></div>
+            <div class="mobile_txt">
+              <h2>Financial Services</h2>
+              <p>재무 운영에서 규정 준수 및 의사 결정을 가속화하세요.</p>
+            </div>
+          </div>
+
+          <div class="mobile_item mobile_item_4">
+            <div class="mobile_circle mobile_circle_4"></div>
+            <div class="mobile_stick mobile_stick_4"></div>
+            <div class="mobile_txt">
+              <h2>Manufacturing</h2>
+              <p>AI로 제조 작업을 간소화하세요.</p>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- section_3 end -->
