도넛빼고 다한듯

--- a/index.html
+++ b/index.html
@@ -34,17 +34,182 @@
         <div class="logo">
           <a href="#"><img src="img/logo.png" alt="upstage" /></a>
         </div>
-        <div class="header_right">
-          <ul class="menu_wrap">
-            <li><a href="#">Why Upstage</a></li>
-            <li><a href="#">Tech</a></li>
-            <li><a href="#">Solutions</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Try demo↗</a></li>
+        <div class="ham_icon">
+          <button class="hamburger_btn" aria-label="메뉴">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+        </div>
+        <ul class="menu_wrap">
+          <li class="menu_nav">
+            <a href="#">Why Upstage</a>
+            <ul class="hide_menu">
+              <li><a href="#">About us</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Partners</a></li>
+              <li><a href="#">Newsroom</a></li>
+              <li><a href="#">Support</a></li>
+            </ul>
+          </li>
+          <li class="menu_nav">
+            <a href="#">Tech</a>
+            <ul class="hide_menu">
+              <li><a href="#">Generative intelligence</a></li>
+              <li><a href="#">Document intelligence</a></li>
+              <li><a href="#">Intelligent spaces</a></li>
+            </ul>
+          </li>
+          <li class="menu_nav">
+            <a href="#">Solutions</a>
+            <ul class="hide_menu">
+              <li><a href="#">Insurance</a></li>
+              <li><a href="#">Healthcare</a></li>
+              <li><a href="#">Manufacturing</a></li>
+              <li><a href="#">Financial Services</a></li>
+            </ul>
+          </li>
+          <li class="menu_nav">
+            <a href="#">Projects</a>
+            <ul class="hide_menu">
+              <li><a href="#">API</a></li>
+              <li><a href="#">Marketplace</a></li>
+              <li><a href="#">On-premise</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Try demo↗</a></li>
+        </ul>
+        <div class="header_btn">
+          <a href="#">Contact us</a>
+        </div>
+        <div class="mobile_menu">
+          <button class="mobile_menu_close" aria-label="메뉴 닫기">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M18 6L6 18M6 6l12 12"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </button>
+          <ul>
+            <li class="mobile_nav">
+              <button class="mobile_main">
+                Why Upstage
+                <svg
+                  class="arrow_icon"
+                  width="12"
+                  height="12"
+                  viewBox="0 0 12 12"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M3 4.5L6 7.5L9 4.5"
+                    stroke="currentColor"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+              <ul class="mobile_sub">
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Partners</a></li>
+                <li><a href="#">Newsroom</a></li>
+                <li><a href="#">Support</a></li>
+              </ul>
+            </li>
+            <li class="mobile_nav">
+              <button class="mobile_main">
+                Tech
+                <svg
+                  class="arrow_icon"
+                  width="12"
+                  height="12"
+                  viewBox="0 0 12 12"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M3 4.5L6 7.5L9 4.5"
+                    stroke="currentColor"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+              <ul class="mobile_sub">
+                <li><a href="#">Generative intelligence</a></li>
+                <li><a href="#">Document intelligence</a></li>
+                <li><a href="#">Intelligent spaces</a></li>
+              </ul>
+            </li>
+            <li class="mobile_nav">
+              <button class="mobile_main">
+                Solutions
+                <svg
+                  class="arrow_icon"
+                  width="12"
+                  height="12"
+                  viewBox="0 0 12 12"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M3 4.5L6 7.5L9 4.5"
+                    stroke="currentColor"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+              <ul class="mobile_sub">
+                <li><a href="#">Insurance</a></li>
+                <li><a href="#">Healthcare</a></li>
+                <li><a href="#">Manufacturing</a></li>
+                <li><a href="#">Financial Services</a></li>
+              </ul>
+            </li>
+            <li class="mobile_nav">
+              <button class="mobile_main">
+                Projects
+                <svg
+                  class="arrow_icon"
+                  width="12"
+                  height="12"
+                  viewBox="0 0 12 12"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M3 4.5L6 7.5L9 4.5"
+                    stroke="currentColor"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+              <ul class="mobile_sub">
+                <li><a href="#">API</a></li>
+                <li><a href="#">Marketplace</a></li>
+                <li><a href="#">On-premise</a></li>
+              </ul>
+            </li>
+            <li class="mobile_nav"><a href="#">Try demo</a></li>
           </ul>
-          <div class="header_btn">
-            <a href="#"> Contact us</a>
-          </div>
         </div>
       </header>
       <!-- header end -->
@@ -176,6 +341,53 @@
           <h2>Expert-Built AI</h2>
         </div>
         <div class="con_wrap_3">
+          <div class="donut">
+            <img src="img/section_3_donut.png" alt="donut" />
+            <p>Enterprise <br /><span>AI</span> Solutions</p>
+
+            <div class="donut_stick_1">
+              <div class="stick_1">
+                <div class="txt_wrap_3">
+                  <h2>Insurance</h2>
+                  <p>AI로 보험 운영을 강화하세요.</p>
+                </div>
+              </div>
+              <div class="stick_circle_1"></div>
+            </div>
+
+            <div class="donut_stick_2">
+              <div class="stick_2">
+                <div class="txt_wrap_3">
+                  <h2>Healthcare</h2>
+                  <p>AI를 통해 더욱 스마트한 공급업체 운영을 실현하세요.</p>
+                </div>
+              </div>
+              <div class="stick_circle_2"></div>
+            </div>
+
+            <div class="donut_stick_3">
+              <div class="stick_circle_3"></div>
+              <div class="stick_3">
+                <div class="txt_wrap_3">
+                  <h2>Financial Services</h2>
+                  <p>재무 운영에서 규정 준수 및 의사 결정을 가속화하세요.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="donut_stick_4">
+              <div class="stick_circle_4"></div>
+              <div class="stick_4">
+                <div class="txt_wrap_3">
+                  <h2>Manufacturing</h2>
+                  <p>AI로 제조 작업을 간소화하세요.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="mob_con_wrap_3">
           <div class="donut">
             <img src="img/section_3_donut.png" alt="donut" />
             <p>Enterprise <br /><span>AI</span> Solutions</p>
