--- a/index.html
+++ b/index.html
@@ -393,43 +393,39 @@
             <p>Enterprise <br /><span>AI</span> Solutions</p>
 
             <div class="donut_stick_1">
-              <div class="stick_1">
+              <a href="#" class="stick_1 m_link">
                 <div class="txt_wrap_3">
                   <h2>Insurance</h2>
                   <p>AI로 보험 운영을 강화하세요.</p>
                 </div>
-              </div>
-              <div class="stick_circle_1"></div>
+              </a>
             </div>
 
             <div class="donut_stick_2">
-              <div class="stick_2">
+              <a href="#" class="stick_2 m_link">
                 <div class="txt_wrap_3">
                   <h2>Healthcare</h2>
                   <p>AI를 통해 더욱 스마트한 공급업체 운영을 실현하세요.</p>
                 </div>
-              </div>
-              <div class="stick_circle_2"></div>
+              </a>
             </div>
 
             <div class="donut_stick_3">
-              <div class="stick_circle_3"></div>
-              <div class="stick_3">
+              <a href="#" class="stick_3 m_link">
                 <div class="txt_wrap_3">
                   <h2>Financial Services</h2>
                   <p>재무 운영에서 규정 준수 및 의사 결정을 가속화하세요.</p>
                 </div>
-              </div>
+              </a>
             </div>
 
             <div class="donut_stick_4">
-              <div class="stick_circle_4"></div>
-              <div class="stick_4">
+              <a href="#" class="stick_4 m_link">
                 <div class="txt_wrap_3">
                   <h2>Manufacturing</h2>
                   <p>AI로 제조 작업을 간소화하세요.</p>
                 </div>
-              </div>
+              </a>
             </div>
           </div>
         </div>
@@ -564,20 +560,21 @@
               <div class="card_5">
                 <div class="card_top">
                   <div class="ceo_wrap_5">
-                    <p>CEO, Beach & Company</p>
-                    <h2>안나 비치</h2>
+                    <p>프렌들리 AI CEO</p>
+                    <h2>춘병곤</h2>
                   </div>
                 </div>
                 <div class="card_line"></div>
                 <div class="card_bottom">
                   <div class="txt_wrap_5">
                     <h3>
-                      <span>Upstage AI Space</span>는<br />답을 즉시 찾을 수
-                      있도록 도와줍니다.
+                      Upstage Solar LLM은 인프라에 전력을 공급하여 최적의
+                      <br />
+                      비용으로 고급 AI를 구현할 수 있도록 지원합니다.
                     </h3>
                     <p>
-                      더 이상 스크롤하거나 키워드를 추측할 필요가 없습니다.<br />
-                      쉬운 언어로 질문하고 출처와 함께 정확한 답변을 받습니다.
+                      FriendlyAI와 Upstage는 기업을 위한 생성형 AI 혁신을 <br />
+                      주도하기 위해 최선을 다할 것입니다.
                     </p>
                   </div>
                 </div>
@@ -587,20 +584,22 @@
               <div class="card_5">
                 <div class="card_top">
                   <div class="ceo_wrap_5">
-                    <p>CEO, Beach & Company</p>
-                    <h2>안나 비치</h2>
+                    <p>한화 라이프 데이터 분석 팀 리더</p>
+                    <h2>경원 전</h2>
                   </div>
                 </div>
                 <div class="card_line"></div>
                 <div class="card_bottom">
                   <div class="txt_wrap_5">
                     <h3>
-                      <span>Upstage AI Space</span>는<br />답을 즉시 찾을 수
-                      있도록 도와줍니다.
+                      Upstage OCR은 95% 이상의 정확도를 제공하여 <br />
+                      문서 처리 방식을 혁신합니다.
                     </h3>
                     <p>
-                      더 이상 스크롤하거나 키워드를 추측할 필요가 없습니다.<br />
-                      쉬운 언어로 질문하고 출처와 함께 정확한 답변을 받습니다.
+                      제한적인 OCR 기능을 가진 기존 솔루션과 달리,
+                      <br />
+                      Upstage의 AI는 모든 문서 유형에서 탁월한 정확도를
+                      제공합니다.
                     </p>
                   </div>
                 </div>
